style.css
html, body{
	margin: 0;
	padding: 0
	background-color: #454545;
}

.navBar{
	background-color: #FFFF00;
	color: white;
	list-style: none;
	text-align: center;
	padding: 20px 0 20px 0;
}

.navBar > li {
	display: inline-block;
	padding: 0 25px 0 25px;
}

.navBar > li > a {
	text-decoration: none;
}

.slider{
  	background-size: 1000px;
  	width:1000px;
  	height: 500px;
  	margin: 100px auto;
  	animation: slide 30s infinite;
}

.rounded{
	border-radius: 12px;
}

@keyframes slide{
	0%{
		background-image: url("images/wheel.png");
	}
	20%{
		background-image: url("images/3.png"); 
	}
	40%{
		background-image: url("images/9.png"); 
	}
	60%{
		background-image: url("images/10.png"); 
	}
	80%{
		background-image: url("images/11.png"); 
	}
	100%{
		background-image: url("images/12.png"); 
	}
}

.container {
    position: relative;
    text-align: center;
    color: white;
}

.centered {
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
}

.center {
    display: block;
    margin-left: auto;
    margin-right: auto;
    width: 100%;
    height: 700px;
}

.bcenter{
	display: block;
    margin-left: auto;
    margin-right: auto;
}

